# cavs

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
core/cavs-analyzer/: Cargo.toml
core/cavs-analyzer/src/: compare.rs  detect.rs  entropy.rs  lib.rs  steampipe.rs  walk.rs  windows.rs
core/cavs-chunker/src/: lib.rs
core/cavs-cli/src/: bench_butler_full.rs  bench_env.rs  bench_pipeline.rs  bench_steampipe_cases.rs  classify.rs  io_estimate.rs  main.rs  optimize_patch.rs  pack.rs  profile.rs  serve_cmd.rs  store.rs  test_recovery.rs
core/cavs-cli/tests/: certify_e2e.rs  steampipe_e2e.rs
core/cavs-client/src/: hybrid.rs  main.rs  parallel.rs  serverless.rs
core/cavs-client/tests/: dual_route.rs  parallel.rs  serverless.rs
core/cavs-fetch/: Cargo.toml  README.md
core/cavs-fetch/src/: cache.rs  lib.rs  meta.rs  reconstruct.rs  source.rs
core/cavs-fetch/tests/: static_dir.rs
core/cavs-format/tests/: parallel_ingest.rs
core/cavs-lfs-agent/bench/: http-bench.sh  range_server.py  run.sh
core/cavs-lfs-agent/e2e/: run.sh
core/cavs-manifest/: Cargo.toml
core/cavs-sdk-core/: Cargo.toml
core/cavs-store/: Cargo.toml
core/cavs-workspace/: Cargo.toml
core/cavs-workspace/src/: lib.rs  sharing.rs
docs/: BENCHMARKS.md  BUILD_UPDATE_ANALYZER.md  DEPOTS_BRANCHES_WORKSPACE.md  EMBEDDABLE_FETCH.md  GODOT_PCK_ANALYZER.md  IO_ESTIMATOR.md  LOCAL_CONTENT_SERVER.md  PACK_FILE_OPTIMIZATION.md  PATCH_POLICY_BENCHMARK.md  README.md  ROUTE_PLANNER.md  SDKS.md  SERVERLESS_DELIVERY.md  STEAMPIPE_COMPARISON.md  STEAMPIPE_STYLE_MODEL.md  WHY_NO_STEAM_ANALYZER_PRODUCT.md
game-engine-plugins/unity-plugin/: README.md  package.json
game-engine-plugins/unreal-plugin/: CavsSdk.uplugin  README.md  package.sh
landing/: README.md  benchmarks.html  changelog.html  index.html  products.html
landing/assets/: app.js  changelog.js  charts.js  styles.css
sdks/java/: build.gradle.kts
sdks/kotlin/: build.gradle.kts  pom.xml
sdks/node/: README.md  package-lock.json  package.json
(+75 files in other folders)
