[package]
name = "cavs-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SteamPipe-style update models, pack-file diagnostics and layout recommendations for CAVS builds."
repository.workspace = true
homepage.workspace = true

[dependencies]
cavs-hash = { workspace = true }
cavs-chunker = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zstd = { workspace = true }
memmap2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
