[package]
name = "cavs-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local app/depot/branch/build workspace model for CAVS: SteamPipe-like distribution concepts without a platform."
repository.workspace = true
homepage.workspace = true

[dependencies]
cavs-hash = { workspace = true }
cavs-chunker = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
